AM_CFLAGS = -std=c99 -D_\(txt\)=txt

lib_LTLIBRARIES = libMAReN.la

libMAReN_la_SOURCES = body_node.c \
		      dlist.c \
		      double_node.c \
		      inner_node.c \
		      single_node.c \
		      start_node.c \
		      join_node.c \
		      std_join_node.c \
		      dchk_join_node.c \
		      active_set.c \
		      fact_container.c \
		      rule.c \
		      node.c \
		      context.c \
		      dotty.c \
		      decls.c \
		      std_tests.c \
		      hash.c