AM_CFLAGS = -std=c99 -D_\(txt\)=txt

lib_LTLIBRARIES = libMAReN.la

libMAReN_la_SOURCES = body_node.c body_node.h \
		      dlist.c\
		      double_node.c double_node.h \
		      inner_node.c inner_node.h \
		      single_node.c single_node.h \
		      start_node.c start_node.h \
		      join_node.c join_node.h \
		      std_join_node.c std_join_node.h \
		      dchk_join_node.c dchk_join_node.h \
		      active_set.c \
		      fact_container.c \
		      rule.c \
		      node.c node.h \
		      context.c \
		      dotty.c \
		      decls.c \
		      std_tests.c \
		      hash.c hash.h \
		      as_alloc.c as_alloc.h \
		      ActiveSet.hh Context.hh FactContainer.hh \
		      FunctionObjects.hh Internal.hh Maren.hh \
		      Node.hh Rule.hh
